<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context="com.urjalabs.smartcontroller.SignupActivity"
    android:background="@color/colorLightBlue"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:background="#e8e8e7"
    android:orientation="horizontal"
    android:layout_height="48dp"
    android:layout_width="fill_parent"
    android:layout_gravity="top">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/title_activity_sign_up"/>

</LinearLayout>

    <!-- Login progress -->


    <ProgressBar android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/sign_up_progress"/>


    -<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_form">


    -<LinearLayout
    android:background="@drawable/bg_grey_radiant"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="@dimen/spacing_small">

    <!-- Name Label -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_name"
        android:hint="@string/name"
        android:inputType="textCapWords"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- Email Label -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- Mobile Label -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_mobile"
        android:hint="@string/mobile_no"
        android:inputType="phone"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- house -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_house_no"
        android:hint="@string/house_no"
        android:inputType="textPostalAddress"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- street -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_street"
        android:hint="@string/street"
        android:inputType="textPostalAddress"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- area -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_area"
        android:hint="@string/location"
        android:inputType="textPostalAddress"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- city -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_city"
        android:hint="@string/city"
        android:inputType="text"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- state -->


    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/state"
        android:layout_marginTop="8dp"
        android:prompt="@string/state"
        android:spinnerMode="dialog"/>

    <View
        android:background="@color/colorDarkestGray"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:id="@+id/view1"
        android:layout_marginTop="8dp"/>

    <!-- country-->


    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/countries"
        android:layout_marginTop="8dp"
        android:prompt="@string/country"
        android:spinnerMode="dialog"/>

    <View
        android:background="@color/colorDarkestGray"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:id="@+id/view2"
        android:layout_marginTop="16dp"/>

    <!-- Password Label -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Label -->



    -<com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

</com.google.android.material.textfield.TextInputLayout>

    <!-- Signup Button -->


    <androidx.appcompat.widget.AppCompatButton
        android:background="@color/colorGreen"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@android:color/white"
        android:text="@string/create_account"
        android:layout_marginBottom="24dp"
        android:id="@+id/btn_signup"
        android:layout_marginTop="24dp"
        android:padding="12dp"/>

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/already_member"
        android:layout_marginBottom="24dp"
        android:id="@+id/link_login"/>

</LinearLayout>

</ScrollView>

</LinearLayout>