<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassEmailCheck">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="Forgot Password"
        android:textSize="20dp"
        android:textColor="#0277BD"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_your_registered_email_to_send_your_password_reset_instruction"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_email_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="148dp" />

    <Button
        android:id="@+id/mailbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/reset_pass1"
        android:textColor="#0277BD"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="326dp" />
</LinearLayout>